kubeflow/apps/katib/upstream/installs/katib-with-kubeflow/ui-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: # kpt-merge: /katib-ui
  name: katib-ui
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /katib/
      rewrite:
        uri: /katib/
      route:
        - destination:
            host: katib-ui.$(KATIB_UI_NAMESPACE).svc.cluster.local
            port:
              number: 80
